--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,11 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
 	compile('org.springframework.boot:spring-boot-starter-webflux')
+	compile('com.google.guava:guava:23.0')
 	compileOnly('org.projectlombok:lombok')
+	testCompile('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
 	testCompile('io.projectreactor:reactor-test')
+
 }
